Fix overflow issue in longtranscriptswithnospaces

--- a/sass/includes/_image-block.scss
+++ b/sass/includes/_image-block.scss
@@ -114,6 +114,8 @@
         .transcription__tabpanel {
             margin-top: 1.5rem;
 
+            overflow: hidden;
+
             &.hidden {
                 display: none;
             }
